--- a/MoneyExtension/MoneyExtension.csproj
+++ b/MoneyExtension/MoneyExtension.csproj
@@ -4,6 +4,24 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <PackageId>MoneyExtensions</PackageId>
+    <Version>1.0.0</Version>
+    <License>MIT</License>
+    <Author>Jonatas Silva</Author>
+    <PackageDescription>Extension to convert decimal to integer</PackageDescription>
+    <Description>Extension to convert decimal to integer</Description>
+    <RepositoryUrl>https://github.com/sjondev/pacoteNugetEx</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/sjondev/pacoteNugetEx</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageTags>money;int;decimal;convert</PackageTags>
+    <Title>Money Extension</Title>
+    <Summary>Money Extension is package convert to money in integer</Summary>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\Media\icon.png" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
 </Project>
