--- a/MoneyExtension/MoneyExtension.csproj
+++ b/MoneyExtension/MoneyExtension.csproj
@@ -18,10 +18,12 @@
     <PackageTags>money;int;decimal;convert</PackageTags>
     <Title>Money Extension</Title>
     <Summary>Money Extension is package convert to money in integer</Summary>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\Media\icon.png" Pack="true" PackagePath="\" />
+    <None Include="Readme.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
