--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Run Tests
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --configuration Release --no-build --logger:"console;verbosity=normal"
 
       - name: Create NuGet Package
         run: dotnet pack --configuration Release --no-build
