--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
         run: dotnet pack --configuration Release --no-build
 
       - name: Publish to NuGet
-        run: dotnet nuget push "MoneyExtension/bin/Release/*.nupkg" --api-key ${{ secrets.MONEYEXTENSION_PUBLISH_CI }} --source https://api.nuget.org/v3/index.json
+        run: dotnet nuget push "MoneyExtension/bin/Release/*.nupkg" --api-key ${{ secrets.MONEYEXTENSION_PUBLISH_CI }} --source https://www.nuget.org/api/v2/package
