--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
         run: dotnet pack --configuration Release --no-build
 
       - name: Publish to NuGet
-        run: dotnet nuget push "MoneyExtension\bin\Release\*.nupkg" -k ${{ secrets.TESTE_MONEY_EXTENSION }} -s ${{ env.NUGET_SOURCE_URL }}
+        run: dotnet nuget push "MoneyExtension/bin/Release/*.nupkg" -k ${{ secrets.TESTE_MONEY_EXTENSION }} -s ${{ env.NUGET_SOURCE_URL }}
