--- a/MoneyExtension/MoneyExtension.csproj
+++ b/MoneyExtension/MoneyExtension.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <PackageId>MoneyExtensions</PackageId>
+    <PackageId>TESTE_MONEY_EXTENSION</PackageId>
     <Version>1.0.0</Version>
     <License>MIT</License>
     <Author>Jonatas Silva</Author>
