--- a/MoneyExtension/MoneyExtension.csproj
+++ b/MoneyExtension/MoneyExtension.csproj
@@ -5,8 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <PackageId>TESTE_MONEY_EXTENSION</PackageId>
-    <Version>1.0.0</Version>
+    <PackageId>MoneyExtensionTeste</PackageId>
+    <Version>1.0.1</Version>
     <License>MIT</License>
     <Author>Jonatas Silva</Author>
     <PackageDescription>Extension to convert decimal to integer</PackageDescription>
